--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Memorizer"
         android:fullBackupContent="true">
-        <activity android:name=".ui.home.HomeActivity">
+        <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".ui.home.HomeActivity"/>
     </application>
 
 </manifest>
