--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.10"
     ext.koin_version = '2.2.1'
+    ext.lottie_version = '3.5.0'
     repositories {
         google()
         jcenter()
