--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,7 @@ dependencies {
     /*Lottie*/
     implementation "com.airbnb.android:lottie:$lottie_version"
 
+    /*Coroutine*/
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
 }
