--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,9 @@ dependencies {
     /*Coroutine*/
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
+    /*Room*/
+    implementation "androidx.room:room-runtime:2.3.0-alpha04"
+    annotationProcessor "androidx.room:room-compiler:2.3.0-alpha04"
+    kapt "androidx.room:room-compiler:2.3.0-alpha04"
+
 }
