--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
 
     /*Test*/
     testImplementation 'junit:junit:4.13.1'
@@ -85,6 +85,9 @@ dependencies {
 
     /*Lifecycle*/
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
     /*Material Design*/
     implementation 'com.google.android.material:material:1.2.1'
@@ -99,18 +102,19 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottie_version"
 
     /*Coroutine*/
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
 
     /*Room*/
-    implementation "androidx.room:room-runtime:2.3.0-alpha04"
-    annotationProcessor "androidx.room:room-compiler:2.3.0-alpha04"
-    kapt "androidx.room:room-compiler:2.3.0-alpha04"
+    implementation "androidx.room:room-runtime:2.3.0-beta01"
+    annotationProcessor "androidx.room:room-compiler:2.3.0-beta01"
+    kapt "androidx.room:room-compiler:2.3.0-beta01"
+    implementation "androidx.room:room-ktx:2.3.0-beta01"
 
     /*Hilt*/
     implementation "com.google.dagger:hilt-android:2.31-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.31-alpha"
-    implementation "androidx.hilt:hilt-common:1.0.0-alpha02"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
+    implementation "androidx.hilt:hilt-common:1.0.0-alpha03"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha03"
 
 }
