--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     /*Material Design*/
     implementation 'com.google.android.material:material:1.2.1'
 
+    /*Coordinator Layout*/
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+
     /*Constraint Layout*/
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
