--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
 }
@@ -60,8 +60,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
 
     /*Test*/
     testImplementation 'junit:junit:4.13.2'
@@ -105,16 +105,16 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
 
     /*Room*/
-    implementation "androidx.room:room-runtime:2.3.0-beta02"
-    annotationProcessor "androidx.room:room-compiler:2.3.0-beta02"
-    kapt "androidx.room:room-compiler:2.3.0-beta02"
-    implementation "androidx.room:room-ktx:2.3.0-beta02"
+    implementation "androidx.room:room-runtime:2.3.0-beta03"
+    annotationProcessor "androidx.room:room-compiler:2.3.0-beta03"
+    kapt "androidx.room:room-compiler:2.3.0-beta03"
+    implementation "androidx.room:room-ktx:2.3.0-beta03"
 
     /*Hilt*/
     implementation "com.google.dagger:hilt-android:2.31-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.31-alpha"
-    implementation "androidx.hilt:hilt-common:1.0.0-alpha03"
+    implementation "androidx.hilt:hilt-common:1.0.0-beta01"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
 
 }
